--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,24 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.profileImg {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.comment {
+  font-size: 14px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.body {
+  display: flex;
+}
+.card {
+  border: 2px solid black;
+  padding: 8px;
+  margin: 10px;
+}
+li {
+  list-style-type: none;
+}
